F-Curve Auto Snap problems #39819

Closed
opened 2014-04-21 02:00:45 +02:00 by koil · 9 comments

System Information
Windows 7 32 bit
AMD Radeon HD 7310M

Blender Version
Broken: Blender 2.70a, win 32 bit, f93bc76.

Short description of error

When moving keyframes with G, Auto Snap modes dont work as expected.

Exact steps for others to reproduce the error

  • I added some keyframes to Cube X location.
  • File: Auto_Snap.blend
  • In the Graph Editor, Auto Snap is set to Nearest Frame.
  • Select a keyframe then move it left or right. Works as expected, snapping to frame.
  • Via View Menu enable Show Seconds.
  • Select a keyframe then move it left or right. Snaps to +24, same as FPS. This maybe Bug. Nearest Frame "Snap to actual frames/seconds (nla-action time)". With the enum set to Nearest Frame, it should still snap to frames.
  • Via header set Auto Snap > Time Step.
  • Select a keyframe then move it left or right. No snapping. This maybe Bug. I would of thought this would snap to +24.
  • Via View Menu disable Show Seconds.
  • Select a keyframe then move it left or right. No snapping.
**System Information** Windows 7 32 bit AMD Radeon HD 7310M **Blender Version** Broken: Blender 2.70a, win 32 bit, f93bc76. **Short description of error** When moving keyframes with G, Auto Snap modes dont work as expected. **Exact steps for others to reproduce the error** * I added some keyframes to Cube X location. * File: [Auto_Snap.blend](https://archive.blender.org/developer/F85466/Auto_Snap.blend) * In the Graph Editor, Auto Snap is set to Nearest Frame. * Select a keyframe then move it left or right. Works as expected, snapping to frame. * Via View Menu enable Show Seconds. * Select a keyframe then move it left or right. Snaps to +24, same as FPS. This maybe Bug. Nearest Frame "Snap to actual frames/seconds (nla-action time)". With the enum set to Nearest Frame, it should still snap to frames. * Via header set Auto Snap > Time Step. * Select a keyframe then move it left or right. No snapping. This maybe Bug. I would of thought this would snap to +24. * Via View Menu disable Show Seconds. * Select a keyframe then move it left or right. No snapping.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @koilz

Added subscriber: @koilz
Joshua Leung self-assigned this 2014-04-21 02:14:28 +02:00
Member

Thanks for the report. This is on my todo list as a bug that needs to be fixed.

Thanks for the report. This is on my todo list as a bug that needs to be fixed.
Member

Just a little update: I've fixed the bug locally, but in the process have ended up discovering 4-5 other related problems here. One unresolved one is #39880, which I'll look into again tomorrow after getting some sleep :)

Just a little update: I've fixed the bug locally, but in the process have ended up discovering 4-5 other related problems here. One unresolved one is #39880, which I'll look into again tomorrow after getting some sleep :)

This issue was referenced by blender/blender-addons-contrib@9c28a24153

This issue was referenced by blender/blender-addons-contrib@9c28a241538f8bf5a54ca5670cac3cbb5bff9e13

This issue was referenced by 9c28a24153

This issue was referenced by 9c28a241538f8bf5a54ca5670cac3cbb5bff9e13
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 9c28a24153.

Closed by commit 9c28a24153.
Author

Thanks for fixing this. Seems like a new set of tools.
Ill have to download a recent build sometime.

Thanks for fixing this. Seems like a new set of tools. Ill have to download a recent build sometime.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39819
No description provided.